# cambio

./: .gitignore  .gitmodules  CMakeLists.txt  CambioAndroid.pro  README.md  main.cpp  readme.txt
.github/actions/setup_dev_env/: action.yml
.github/workflows/: build_cl.yml
cambio/: AxisLabelUtils.h  BatchConvertDialog.h  BusyIndicator.h  CambioApp.h  Cambio_config.h.in  CommandLineUtil.h  FileDetailTools.h  FileDetailWidget.h  MainWindow.h  SaveWidget.h  SpectrumChart.h  SpectrumView.h  TimeChart.h  TimeView.h  about_icons.hpp  left_arrow.hpp  macos_helper.h  right_arrow.hpp  sandia_logo.h  splash_screen.h
cmake/: addQtProject.cmake  iOSToolchain.cmake  toolchain-android-arm.cmake
graphics/: CambioLoadScreen.xcf
src/: AxisLabelUtils.cpp  BatchConvertDialog.cpp  BusyIndicator.cpp  CambioApp.cpp  CommandLineUtil.cpp  FileDetailTools.cpp  FileDetailWidget.cpp  MainWindow.cpp  SaveWidget.cpp  SpectrumChart.cpp  SpectrumView.cpp  TimeChart.cpp  TimeView.cpp  macos_helper.mm  sandia_logo.cpp
template_test/: CMakeLists.txt  template_test.cpp
tools/: build_cl_dependencies_msvc2022.bat
